First refactor for Junit5 tests
Restructure the test framework to eliminate duplicate test classes and
use parameterized class testing. This change consolidates various
tests associated with the former BaseTestAES into a single
parameterized test.

Created new test suite package ibm.jceplus.junit.suites. New
suites make use of Junit tags / groups to find tests to run.
Multithreaded tests now are also executed and found using tags.

Created test package ibm.jceplus.junit.tests this package contains all
tests migrated to the new paramaterized format. Tests that have been
converted have been removed. A new BaseTest abstract class for common
functions was added based upon the old Junit5BaseTest.

Created a TestArguments utility for generating test parameter variations
that can be used in classes. This allows for tests to have dynamic
variations based upon the group tag.

Modified pom.xml to support new test suites. Tests will be migrated to
the new suites and eventually older suites removed.

Updated the README.md to reflect the groups option now available.

Back-ported from: https://github.com/IBM/OpenJCEPlus/pull/1051

Note: This commit contains unresolved merge conflicts that require manual resolution.

Signed-off-by: Jason Katonica <katonica@us.ibm.com>